added a fourth service

--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
         <li>good dining place</li>
         <li>all type of food items avaliable</li>
         <li>we provide free delivery</li>
+        <li>maintaing clean and neat</li>
     </ul>
         
 </body>
